--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <div class="city"><img src="city.png" alt=""/></div>
 <img src="moon.png" alt="" id="moon" style="visibility: hidden;"/>
 <div style="display:none">
-  <div class="shape">温小猪新年快乐</div>
-  <div class="shape">猪宝宝兔年大吉</div>
+  <div class="shape">请你看烟花</div>
+  <div class="shape">天天开心李佳灵</div>
   <div class="shape">ヾ(^∀^)ﾉ❤</div>
 </div>
 <audio src="boom.mp3" preload="auto"></audio>
