--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       width: 100%;
     }
   </style>
-  <title>2023猪宝宝兔年快乐</title>
+  <title>2024天天快乐</title>
 </head>
 <body onselectstart="return false">
 <canvas id='cas' style="background-color:rgba(0,5,24,1)">浏览器不支持canvas</canvas>
